Fix buttons on mobile home2 page; SFM better way to do convert/goto.

--- a/cmgm/database/styles/Home/mobile.css
+++ b/cmgm/database/styles/Home/mobile.css
@@ -17,7 +17,7 @@
   width: 46.75%!important;
 }
 .width-50 {
-  width: 42.5%!important;
+  width: 50%!important;
 }
 .width-25 {
   width: 21.25%!important;
